infra/minio/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/display-name: Minio
  name: minio-operator
